<resources>
    <string name="app_name">CashFlow</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="subpresupuesto">Subpresupuesto:</string>
    <string name="fecha_inicio_periodo">Fecha para cambiar de periodo:</string>
    <string name="confirmar">Confirmar</string>
    <string name="home">HOME</string>
    <string name="ingresar_presupuesto_fecha">Ingrese su Presupuesto y Fecha de Pago</string>
    <string name="ajustes">Ajustes</string>
    <string name="designed_by">Designed By Matias Diaz</string>
    <string name="copyright">© Copyright 2023–2023</string>
    <string name="titulo_ajustes">Ajustes</string>
    <string name="titulo_añadir_gasto">Añadir Gasto</string>
    <string name="nombre_gasto">Nombre Gasto</string>
    <string name="monto_gasto">Monto Gasto</string>
    <string name="guardar">Guardar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="seleccionar_categoria">Seleccionar Categoria</string>
    <string name="mensaje_lista_gastos">No hay datos para mostrar\nIngrese un nuevo dato en el botón de la esquina inferior derecha.</string>
    <string name="mensaje_lista_gastos2">No hay datos que coincidan con el filtro aplicado.</string>

    <!-- Preference Titles -->
    <string name="presupuesto_header">Presupuesto</string>
    <string name="theme_header">Tema</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Fecha de Pago</string>

    <!-- Sync Preferences -->
    <string name="theme_title">Utilizar tema del sistema</string>
    <string name="theme_on">Elegir manualmente el tema (Experimental: Puede producir fallos)</string>
    <string name="theme_off">Aplicar tema utilizado por el sistema</string>
    <string name="dark_title">Modo oscuro</string>
    <string name="dark_on">Modo oscuro activado</string>
    <string name="dark_off">Modo oscuro desactivado</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>