<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AnadirGastoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/azul_marino_2"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivNuevoGasto"
        android:layout_alignBottom="@+id/ivNuevoGasto"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/ivNuevoGasto"
        android:ems="10"
        android:hint="@string/nombre_gasto"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/txtMonto"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivMontoGasto"
        android:layout_alignBottom="@+id/ivMontoGasto"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/ivMontoGasto"
        android:ems="10"
        android:hint="@string/monto_gasto"
        android:inputType="number" />

    <Spinner
        android:id="@+id/spnCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMonto"
        android:layout_marginTop="40dp"
        android:entries="@array/categorias"
        android:longClickable="false"
        android:minHeight="40dp"
        android:prompt="@string/seleccionar_categoria" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spnCategoria"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/verde_menta_2"
        android:text="@string/guardar" />

    <Button
        android:id="@+id/btn_actualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spnCategoria"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/verde_menta_2"
        android:text="@string/actualizar"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spnCategoria"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="9dp"
        android:backgroundTint="@color/rojo"
        android:text="@string/eliminar"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/ivNuevoGasto"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="39dp"
        app:srcCompat="@drawable/payments_fill" />

    <ImageView
        android:id="@+id/ivMontoGasto"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_below="@+id/ivNuevoGasto"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/payments_fill" />
</RelativeLayout>