<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresar_presupuesto_fecha"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/editTextPresupuesto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/presupuesto"
        android:inputType="number"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextFecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/fecha_inicio_periodo"
            android:focusable="false"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/imageViewCalendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="Botón de calendario"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_my_calendar"/>

    </LinearLayout>

    <DatePicker
        android:id="@+id/datePickerFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>
